# metadata_props

./: CMakeLists.txt  README.md  file.cpp  file.hpp  indexer.cpp  indexer.hpp  meta_data_model.cpp  meta_data_model.hpp  metadata_props.desktop  plugin.cpp  plugin.hpp  util.cpp  util.hpp  widget.cpp  widget.hpp
